--- a/01-fundamentos/bloco-03-introduçao-a-html-e-css/dia-02-html-css-primeiros-passos-em-css/exercicio-de-fixacao-01/index.html
+++ b/01-fundamentos/bloco-03-introduçao-a-html-e-css/dia-02-html-css-primeiros-passos-em-css/exercicio-de-fixacao-01/index.html
@@ -1,32 +1,36 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
+<html lang="pt-br">
+  <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Exercício de Fixação 01</title>
     <style>
-       h1 {
+        h1 {
            font-size: 40px;
            color: orange;
-       } 
+        } 
        ul {
            background-color: aqua;
        }
        .background {
            background-color: yellow;
        }
-
-
     </style>
-</head>
-<body>
-    <h1>Exercícios 3.2</h1>
+  </head>
+  <body>
+    <h1>Exercício de Fixação 01 - 3.2</h1>
     <p class="background">Qual é a sua cor favorita?</p>
     <ul class="background">
-        <li>Amarelo</li>
-        <li>Vermelho</li>
-        <li>Marrom</li>
+      <li>Amarelo</li>
+      <li>Vermelho</li>
+      <li>Marrom</li>
     </ul>
-</body>
+  </body>
 </html>
+
+
+<!-- 
+1 - Modifique o tamanho do h1 para 65 pixels
+2 - Modifique a cor do texto do h1 para laranja
+3 - Modifique a cor de fundo da lista não ordenada
+4 - Crie uma classe para modificar a cor de fundo da tag p e da ul ao mesmo tempo 
+-->
