Adiciona exercícios de fixação 01,02,03,04 e 05

--- a/01-fundamentos/bloco-03-introduçao-a-html-e-css/dia-03-html-e-css-seletores-e-posicionamento/exercicio-de-fixacao-02/index.html
+++ b/01-fundamentos/bloco-03-introduçao-a-html-e-css/dia-03-html-e-css-seletores-e-posicionamento/exercicio-de-fixacao-02/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
   <head>
     <meta charset="UTF-8">
-    <title>Posicionamento de elementos</title>
+    <title>Exercício de Fixação 02- Posicionamento de elementos</title>
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
@@ -16,3 +16,7 @@
     <img src="https://bit.ly/3tmxgED" alt="baloon" class="baloon" />
   </body>
 </html>
+
+<!-- 1 - Posicione o Mário acima do Goomba.
+2 - Posicione a tag p para que fique dentro do balão de fala.
+3 - Posicione o balão para que se torne uma fala de Bowser. -->
