--- a/fundamentos/bloco-03/dia-2/exercicio1/index.html
+++ b/fundamentos/bloco-03/dia-2/exercicio1/index.html
@@ -9,13 +9,13 @@
     background-color: aqua;
   }
 
-.pul {
-  background-color: chartreuse;
-}
+  .pul {
+    background-color: chartreuse;
+  }
 </style>
 <html lang="pt-br">
   <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" />
     <title>Exercício de Fixação 01</title>
     <style></style>
   </head>
@@ -29,8 +29,3 @@
     </ul>
   </body>
 </html>
-
-<!-- 1 - Modifique o tamanho do h1 para 65 pixels
-2 - Modifique a cor do texto do h1 para laranja
-3 - Modifique a cor de fundo da lista não ordenada
-4 - Crie uma classe para modificar a cor de fundo da tag p e da ul ao mesmo tempo -->
