modifica os nomes e os arquivos do bloco 7

--- a/fundamentos/bloco-07/dia-1/exercicio5/index.html
+++ b/fundamentos/bloco-07/dia-1/exercicio5/index.html
@@ -10,6 +10,6 @@
     <button id="button">Click</button>
     <span id="count"></span>
 
-    <script src="exercicio-parte-2.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
